#129 fix save tips on small devise

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -1,5 +1,3 @@
-// # FIXME soeren 3/16/16 aufraeumen
-
 // http://foundation.zurb.com/sites/docs/media-queries.html
 // new way to set media queries in scss, with breakpoint mixins
 
@@ -96,9 +94,6 @@ a.brand {
   word-wrap: break-word;      /* IE 5+ */
 }
 
-
-
-
 /* ##### Start Scroll to top ##### */
 .scroll-to-top {
   width: 37px;
@@ -108,6 +103,7 @@ a.brand {
   right: 10px;
   display: none;
   text-indent: -9999px;
+  z-index: 5;
   background: transparent url(image_path('scroll-to-top.png')) no-repeat;
 }
 /* ##### End Scroll to top ##### */
@@ -136,7 +132,6 @@ div.input-group-label {
   color: lighten($body-font-color, 20%);
 }
 
-.game-result,
 .small-infos {
   padding-bottom: 5px;
 }
