--- a/app/assets/stylesheets/overlay_tip_save_button.scss
+++ b/app/assets/stylesheets/overlay_tip_save_button.scss
@@ -19,7 +19,6 @@
 
 #js_overlay_tip_save span {
   display: block;
-  background-color: #ffa;
   margin: 0 12px;
   padding: .5em 0;
   border: 0 solid #8a8d7f;
